# takehome-interview-main-phoebe

./: .gitignore  PROJECT_REFLECTION.md  README.md  pyproject.toml  sample_data.json
app/: api.py  database.py  fanout_service.py  intent.py  models.py  notifier.py
tests/: example_test.py
